# fimPrimeiroPeriodo

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  dockerfile
includes/: elements.h  interactiveElements.h  keys.h  lib.h  screens.h  standart.h  window.h
includes/client/: client.h  loadScreens.h
includes/client/database/: README.md
includes/client/views/: auth.h  extrato.h  home.h  menu.h  moneySender.h
includes/models/: PaymentModel.h  UserModel.h
includes/rafaGraphics/: box.h  button.h  input.h  screens.h  window.h
includes/sarahQL/: contentDescriptor.h  createTable.h  insert.h  selectAll.h  where.h
includes/server/: server.h
includes/server/api/: api.h
includes/server/api/controllers/: homeController.h
includes/server/api/models/: PaymentModel.h
includes/server/controllers/: homeController.h  paymentController.h  tokenAuthController.h
includes/server/database/: .gitignore  README.md
src/: main.c
src/definitions/: standart.c
src/definitions/client/: auth.c  client.c  extrato.c  home.c  loadScreens.c  moneySender.c
src/definitions/models/: PaymentModel.c  UserModel.c
src/definitions/rafaGraphics/: box.c  button.c  input.c  screens.c  window.c
src/definitions/sarahQL/: createTable.c  insert.c  selectAll.c  where.c
src/definitions/server/: homeController.c  paymentController.c  server.c  tokenAuthController.c
